# robotics

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionGoal.h  LandingActionResult.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  TakeoffGoal.h  TakeoffResult.h  (+4 more)
devel/include/keyboard/: Key.h
devel/include/keyboard_reader/: Key.h
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_pose_estimation/: pose_estimation
devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/image_transport/: list_transports  republish
devel/lib/keyboard_reader/: keyboard_event_publisher
devel/lib/message_to_tf/: message_to_tf
devel/lib/pkgconfig/: artrack.pc  cv_bridge.pc  hector_components_description.pc  hector_compressed_map_transport.pc  hector_gazebo_plugins.pc  hector_gazebo_thermal_camera.pc  hector_gazebo_worlds.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_pose_estimation.pc  hector_pose_estimation_core.pc  hector_quadrotor_actions.pc  hector_quadrotor_controller_gazebo.pc  hector_quadrotor_controllers.pc  hector_quadrotor_demo.pc  hector_quadrotor_description.pc  hector_quadrotor_gazebo.pc  hector_quadrotor_gazebo_plugins.pc  hector_quadrotor_interface.pc  (+12 more)
src/artrack/: CMakeLists.txt  package.xml  startEnginesDrone
src/artrack/launch/: objTrackerDrone.launch  objTrackerWC.launch
src/artrack/src/: SimpleWorld.world  artrack_controller  artrack_controller.cpp  artrack_imgproc  artrack_imgproc.cpp  artrack_keyinput  artrack_keyinput.cpp
src/cv_bridge/: CMakeLists.txt
(+52 files in other folders)
